[gd_scene load_steps=4 format=2]

[ext_resource path="res://actor/rock/rock.gd" type="Script" id=1]
[ext_resource path="res://actor/rock/rock64.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="rock64" type="Area2D" groups=["64"]]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="sprite2" type="Sprite" parent="sprite"]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
position = Vector2( 0, -80 )
scale = Vector2( 0.9, 0.9 )
z_index = -1
texture = ExtResource( 2 )

[node name="sprite3" type="Sprite" parent="sprite"]
self_modulate = Color( 0.117647, 0.117647, 0.117647, 1 )
position = Vector2( 0, -160 )
scale = Vector2( 0.7, 0.7 )
z_index = -1
texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.707108, -160.232 )
scale = Vector2( 2.18995, 1.81317 )

[connection signal="area_entered" from="." to="." method="_on_rock32_area_entered"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
